--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   flutter_bloc: ^9.0.0
   camera: ^0.11.0+2
   permission_handler: ^11.3.1
+  crypto: ^3.0.6
+  shared_preferences: ^2.4.0
+  firebase_storage: ^12.4.1
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +26,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - lib/assets/dummy.png
