--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   crypto: ^3.0.6
   shared_preferences: ^2.4.0
   firebase_storage: ^12.4.1
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
@@ -28,3 +29,12 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/dummy.png
+    - lib/assets/logo-big.png
+    - lib/assets/logo-small.png
+    - lib/assets/avatar_0.png
+    - lib/assets/avatar_1.png
+    - lib/assets/avatar_2.png
+    - lib/assets/avatar_3.png
+    - lib/assets/avatar_4.png
+    - lib/assets/avatar_5.png
+    - lib/assets/avatar_6.png
