--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   shared_preferences: ^2.4.0
   firebase_storage: ^12.4.1
   flutter_svg: ^2.0.17
+  animated_splash_screen: ^1.3.0
+  lottie: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -38,3 +40,7 @@ flutter:
     - lib/assets/avatar_4.png
     - lib/assets/avatar_5.png
     - lib/assets/avatar_6.png
+    - lib/assets/currency_icon.png
+    - lib/assets/question_icon.png
+    - lib/assets/heart_icon.png
+    - lib/assets/splash_animation.json
