--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,3 +2,4 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   errors:
     prefer_const_constructors: ignore
+    library_private_types_in_public_api: ignore
