--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^2.0.17
   animated_splash_screen: ^1.3.0
   lottie: ^3.2.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
